fix binNdim link

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <!-- badges: start -->
 <!-- badges: end -->
 <p>Efficient tools for the analysis of high-resolution genomics data in R.</p>
+<p>Explore the documentation: <a href="https://mdeber.github.io/index.html" class="uri">https://mdeber.github.io/index.html</a></p>
 <div id="installation" class="section level2">
 <h2 class="hasAnchor">
 <a href="#installation" class="anchor"></a>Installation</h2>
