--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">BRGenomics</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.3.0</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.4.0</span>
       </span>
     </div>
 
@@ -47,6 +47,9 @@
 </li>
 <li>
   <a href="reference/index.html">Reference</a>
+</li>
+<li>
+  <a href="news/index.html">Changelog</a>
 </li>
       </ul>
 <ul class="nav navbar-nav navbar-right"></ul>
@@ -80,7 +83,7 @@
 <a href="#features" class="anchor"></a>Features</h2>
 <p>A full introductory vignette is in the works, but some quick highlights include:</p>
 <ul>
-<li>Data import</li>
+<li>Simple data import for bigWig, bedGraph, and bam files</li>
 <li>Read counting by genes and positions in genes (e.g. for heatmaps)</li>
 <li>Bootstrapping mean signals at positions within genes (e.g. for metaplotting)</li>
 <li>Straightforward integration with DESeq2, including:
@@ -101,7 +104,6 @@
 <h2 class="hasAnchor">
 <a href="#coming-soon" class="anchor"></a>Coming Soon</h2>
 <ul>
-<li>Support for importing bam files directly</li>
 <li>Calculation of spike-in normalization factors using several different methods</li>
 <li>Functions to assess sufficiency of sequencing depth using meaningful metrics, e.g. pausing indices</li>
 <li>Support for length-scaled, bootstrapped signal counting, i.e. signal is binned by percentage of gene length</li>
