--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">BRGenomics</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.99.15</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.99.19</span>
       </span>
     </div>
 
@@ -104,18 +104,22 @@
 <a href="#features" class="anchor"></a>Features</h2>
 <p>See the <a href="https://mdeber.github.io/">documentation website</a>, which includes a draft version of the introductory vignette, as well as the documentation for currently implemented functions, complete with demonstrative example code. The package currently includes example PRO-seq data<sup>[1]</sup>.</p>
 </div>
-<div id="known-issues-and-limitations" class="section level2">
+<div id="limitations-for-windows-users" class="section level2">
 <h2 class="hasAnchor">
-<a href="#known-issues-and-limitations" class="anchor"></a>Known issues and limitations</h2>
+<a href="#limitations-for-windows-users" class="anchor"></a>Limitations for Windows users</h2>
 <ul>
-<li>Currently no support for multicore processing on Windows</li>
-<li>No support for importing bigWig files on Windows</li>
-<li>Certain gene names can cause <code>getDESeqDataSet</code> to return an error
-<ul>
-<li>Systematic naming schemes work (e.g. ensembl IDs) while some lists of conventional gene names, i.e. “symbols”, will cause failure</li>
+<li>Currently no support for parallel/multicore processing</li>
+<li>No support for import bigWig files</li>
 </ul>
-</li>
-<li>Most multicore support is robust to the use of alternative BLAS libraries, with the exception of <code>getDESeqResults</code>. Users opting to use alternative, concurrent BLAS libraries may have to set <code>ncores = 1</code>.</li>
+</div>
+<div id="to-do" class="section level2">
+<h2 class="hasAnchor">
+<a href="#to-do" class="anchor"></a>To Do</h2>
+<ul>
+<li>Convert method dispatch to S4 generics</li>
+<li>Add support for <code>GRangesList</code> objects (progress underway)</li>
+<li>Write methods for <code>BigWigFile</code>/<code>BigWigFileList</code> objects (to avoid loading data into memory)</li>
+<li>(Possibly) use <code>GPos</code> objects by default</li>
 </ul>
 <hr>
 <ol>
