--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">BRGenomics</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.99.30</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.99.33</span>
       </span>
     </div>
 
@@ -178,6 +178,8 @@
     <div class="links">
 <h2>Links</h2>
 <ul class="list-unstyled">
+<li>Download from BIOC at <br><a href="https://www.bioconductor.org/packages/BRGenomics">https://​www.bioconductor.org/​packages/​BRGenomics</a>
+</li>
 <li>Report a bug at <br><a href="https://github.com/mdeber/BRGenomics/issues">https://​github.com/​mdeber/​BRGenomics/​issues</a>
 </li>
 </ul>
