--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 <div id="brgenomics" class="section level1">
 <div class="page-header"><h1 class="hasAnchor">
 <a href="#brgenomics" class="anchor"></a>BRGenomics</h1></div>
-<!-- badges: start -->
+<!-- badges: start (versions currently manual...) -->
+
 <!-- badges: end -->
 <p>Efficient tools for the analysis of high-resolution genomics data in R.</p>
 <p>Explore the documentation: <a href="https://mdeber.github.io/" class="uri">https://mdeber.github.io/</a></p>
@@ -200,7 +201,19 @@
 </ul>
 </div>
 
-  </div>
+  <div class="dev-status">
+<h2>Dev status</h2>
+<ul class="list-unstyled">
+<li><a href="https://bioconductor.org/checkResults/release/bioc-LATEST/BRGenomics/"><img src="https://img.shields.io/badge/platforms-linux%20%7C%20osx%20%7C%20win-yellow.svg" alt="platforms"></a></li>
+<li><a href="https://www.bioconductor.org/packages/BRGenomics"><img src="https://img.shields.io/badge/release%20version-1.0.3-navy.svg" alt="release"></a></li>
+<li><a href="http://bioconductor.org/checkResults/devel/bioc-LATEST/BRGenomics/"><img src="http://www.bioconductor.org/shields/lastcommit/release/bioc/BRGenomics.svg" alt="updated"></a></li>
+<li><a href="https://github.com/mdeber/BRGenomics"><img src="https://img.shields.io/badge/devel%20version-1.1.3-orange.svg" alt="devel"></a></li>
+<li><a href="https://github.com/mdeber/BRGenomics/commits/master"><img src="https://img.shields.io/github/last-commit/mdeber/BRGenomics.svg" alt="last commit"></a></li>
+<li><a href="https://bioconductor.org/checkResults/release/bioc-LATEST/BRGenomics/"><img src="http://www.bioconductor.org/shields/build/release/bioc/BRGenomics.svg" alt="BioC status"></a></li>
+<li><a href="https://codecov.io/gh/mdeber/BRGenomics"><img src="https://codecov.io/gh/mdeber/BRGenomics/branch/master/graph/badge.svg" alt="test coverage"></a></li>
+</ul>
+</div>
+</div>
 </div>
 
 
